compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__type_alias__aliasing_of_unknown_type.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
expression: "\npub type UnknownAlias = UnknownType\npub type UsageOfUnknownAlias = UnknownAlias\n"
---
----- SOURCE CODE

pub type UnknownAlias = UnknownType
pub type UsageOfUnknownAlias = UnknownAlias


----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:2:25
  │
2 │ pub type UnknownAlias = UnknownType
  │                         ^^^^^^^^^^^

The type `UnknownType` is not defined or imported in this module.
