compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__type_alias__multiple_aliases_of_unknown_type.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
expression: "\npub type UnknownAlias = UnknownType\n\npub type One = List(UnknownAlias)\npub type Two = Result(UnknownAlias, Nil)\n"
---
----- SOURCE CODE

pub type UnknownAlias = UnknownType

pub type One = List(UnknownAlias)
pub type Two = Result(UnknownAlias, Nil)


----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:2:25
  │
2 │ pub type UnknownAlias = UnknownType
  │                         ^^^^^^^^^^^

The type `UnknownType` is not defined or imported in this module.
